# test-o-complex

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  example.env  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
weather/core/: asgi.py  settings.py  urls.py  wsgi.py
weather/static/src/css/: autoComplete.min.css  output.css
weather/templates/: 404.html  base.html  header.html  search.html
weather/templates/weather/: weather.html
weather/weather/: ip_location.py  models.py  urls.py  views.py  weather_api.py
weather/weather/data/: en_flags.json  ru_flags.json
